# remaster

./: CMakeLists.txt  README.md  a.out  codes.txt  exe  hi  hsh  main.c  ppid.sh  upper
bit-manipulation/: tasks.c
file-handling/: elf_file.c  handle.c  main.h  tasks.c
js/: arrayTransform.js  closure.js  functions.js  morePromise.js  promises.js  promisesInAction.js
linkedlist/: 101-hello_holberton.asm  LinkedList.c  linkedlist2.c  lists.h  tasks.c
recursion/: basics.c  recur.h
shell/: README.md  random.c
structs/: Car.c  House.c  airplane.c  animal.c  dog.h  tasks.c
